[metadata]
name = elastic_helper
version = 1.2.4
authors = "snuids"
authors_email="snuids@mannekentech.com"
description = "Elastic Search to Pandas Dataframe"
readme = "README.md"
requires-python = ">=3.7"
classifiers = []
keywords = ['ElasticSearch', 'pandas', 'convert'] # arbitrary keywords
description_file = README.md
url = "https://github.com/snuids/elastic_helper"

[options]
packages = find:
install_requires =
    cachetools
    pytz
    tzlocal